[HUB-A116] Add css class tolve overlaping issue

--- a/src/assets/templates/css/style.css
+++ b/src/assets/templates/css/style.css
@@ -317,6 +317,10 @@ h2{
 
 }
 
+.p-b-10{
+    padding-bottom: 10px;
+}
+
 .company-legaltxt p{
     color: #90A1AC;
     font-family: 'Helvetica-Neue';
